function pause, continue

--- a/intex.html
+++ b/intex.html
@@ -9,11 +9,19 @@
   </head>
   <body>
     <div id="board">
-      <div id="background"></div>
+      <div id="background">
+        <div class="scoreContainer">Score: <span id="score">0</span></div>
+      </div>
 
       <div id="player">
         <img src="./assets/dino.png" alt="player" />
       </div>
+      <div id="cactus">
+        <img src="./assets/cactus.png" alt="cactus" />
+      </div>
+    </div>
+    <div class="menu">
+      <button id="buttonPlayStop" class="button play"></button>
     </div>
     <script src="script.js"></script>
   </body>
