function restart game

--- a/intex.html
+++ b/intex.html
@@ -22,6 +22,7 @@
     </div>
     <div class="menu">
       <button id="buttonPlayStop" class="button play"></button>
+      <button id="restartGame">Restart Game</button>
     </div>
     <script src="script.js"></script>
   </body>
