--- a/intex.html
+++ b/intex.html
@@ -16,7 +16,7 @@
       <div id="player">
         <img src="./assets/dino.png" alt="player" />
       </div>
-      <div id="cactus">
+      <div id="cactus" class="animatedCactus">
         <img src="./assets/cactus.png" alt="cactus" />
       </div>
     </div>
